--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
     "express": "^5.1.0",
     "mongoose": "^8.18.1",
     "multer": "^2.0.2",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
