--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,16 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@fontsource/roboto": "^5.2.8",
-    "@mui/icons-material": "^7.3.5",
-    "@mui/material": "^7.3.5",
-    "@tailwindcss/vite": "^4.1.16",
+    "@react-google-maps/api": "^2.20.7",
+    "@tailwindcss/vite": "^4.1.17",
+    "axios": "^1.13.2",
     "react": "^19.1.1",
-    "react-dom": "^19.2.0",
-    "react-redux": "^9.2.0",
-    "tailwindcss": "^4.1.16"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.5",
+    "socket.io-client": "^4.8.1",
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
